src/objects/PGAccess__c.object
<CustomObject>
    <description>CTS Planning group access end point, which takes PGID, LPID, and returns status</description>
    <fields>
        <fullName>AccessStatus__c</fullName>
        <description>Status of Access - Available or Not Available, for that specific LPID.</description>
        <label>AccessStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LPID__c</fullName>
        <description>LP ID</description>
        <label>LPID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGID__c</fullName>
        <description>Planning Group ID</description>
        <label>PGID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>PGAccess</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>LPID__c</columns>
        <columns>PGID__c</columns>
        <columns>AccessStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PG-{0000}</displayFormat>
        <label>PGAccess Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PGAccess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>